# circuitpython-org

./: .gitignore  .gitmodules  .travis.yml  CNAME  Gemfile  README.md  _config.yml  awesome.html  blinka.html  blinka_template.md  check-boards.py  check-features.py  check-images.py  contributing.html  downloads.html  feed.html  feed.rss  generate-board-info.py  help.md  index.html  index.md  libraries.html  missing-boards.py  news.html  news.md  package-lock.json  redirects.json  robots.txt  sitemap.xml  stats.html  template.md  trademarks.html
adabot/: README.rst  README.rst.license  adabot-cron.sh  adabot.screenrc  pyproject.toml  pytest.ini  requirements.txt  template-env.sh
adabot/adabot/: arduino_libraries.py  circuitpython_bundle.py  circuitpython_libraries.py  circuitpython_library_download_stats.py  circuitpython_library_patches.py  circuitpython_library_release.py  github_requests.py  pypi_requests.py  travis_requests.py  update_cp_org_libraries.py
adabot/patches/: 0001-Added-help-text-and-problem-matcher.patch  0001-Added-pre-commit-and-SPDX-copyright.patch  0001-Added-pre-commit-config-file.patch  0001-Added-pull-request-template.patch  0001-Added-pylint-disable-for-f-strings-in-tests-director.patch  0001-Disabled-unspecified-encoding-pylint-check.patch  0001-First-gitignore-patch.patch  0001-First-part-of-patch.patch  0001-Fixed-readthedocs-build.patch  0001-Globally-disabled-consider-using-f-string-pylint-che.patch  0001-Hardcoded-Black-and-REUSE-versions.patch  0001-Increase-duplicate-code-check-threshold.patch  0001-Moved-CI-to-Python-3.7.patch  (+28 more)
(+1957 files in other folders)
